%% NB: The date (yyyy-mm-dd) is the "Packaged:" date in ../DESCRIPTION


\section{Changes in version 2.1.0 (2019-06-.., svn r76..)}{
  \subsection{New Features}{
    \itemize{
      \item (place holder)
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{volume(obj)} is now correct also for ellipsoids of
      dimension \eqn{d > 2}.
    }
  }
  \subsection{Tweaks}{
    \itemize{
      \item Replaced many \dQuote{old style} \verb{`<word>'} quotations.
    }
  }
}

\section{Changes in version 2.0.9 (2019-05-01, svn r7663)}{
  \subsection{Tweaks}{
    \itemize{
      \item \file{src/mona.c} now uses correct \emph{void} \code{F77_NAME}
      and source cleaned.
    }
  }
}

\section{Changes in version 2.0.8 (2019-04-02, svn r7643)}{
  \subsection{New Features}{
    \itemize{
      \item \code{pam()} gets new \code{pamonce} options, for values 3,
      4, or 5, choosing versions of \command{fastpam}, contributed by Erich
      Schubert, Univ. Dortmund.

      \item update \file{tests/*} to work with R >= 3.6.0 (sample.kind)
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item correct thinko in \code{?clusGap}, the help page.
    }
  }
}

\section{Changes in version 2.0.7 (2018-03-29, svn r7509)}{
  \subsection{New Features}{
    \itemize{
      \item \code{clara()} gets new option \code{metric = "jaccard"},
      contributed  by Kamil Kozlowski and Kamil Jadszko.
      %% FIXME:  Also add for  pam() !!

      \item \code{pam()} and \code{clara()} use \code{match.arg(metric)}
      and hence \code{metric} can be abbreviated (and invalid strings
      give an error instead of being interpreted as \code{"euclidean"}).
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item The bug fix of \code{clara(*, correct.d = TRUE)} (from
      version 2.0.4) for the NA-data case now also applies to the
      internal C function \code{selec()}.
    }
  }
}

\section{Changes in version 2.0.6 (2017-03-10, svn r7332)}{
  \subsection{New Features}{