@@ -1,6 +1,6 @@
 Package: cluster
 Version: 2.1.0
-Date: 2019-05-15
+Date: 2019-06-07
 Priority: recommended
 Title: "Finding Groups in Data": Cluster Analysis Extended Rousseeuw et al.
 Description: Methods for Cluster analysis.  Much extended the original from
